[gd_scene load_steps=4 format=3 uid="uid://cemyalgsibiw8"]

[ext_resource type="Script" path="res://timer3.gd" id="1_ui0w8"]
[ext_resource type="AudioStream" uid="uid://bk568m7g5noxe" path="res://alarm.ogg" id="2_ctorr"]

[sub_resource type="LabelSettings" id="LabelSettings_6wv0n"]
font_size = 24

[node name="Panel" type="Panel"]
offset_right = 414.0
offset_bottom = 220.0
script = ExtResource("1_ui0w8")

[node name="TitleInput" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 89.0
offset_top = 11.0
offset_right = 329.0
offset_bottom = 54.0
size_flags_vertical = 0
placeholder_text = "Timer title"
alignment = 1
select_all_on_focus = true

[node name="SettingsUI" type="Node2D" parent="."]

[node name="Inputs" type="Control" parent="SettingsUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeInput" type="LineEdit" parent="SettingsUI/Inputs"]
layout_mode = 0
offset_left = 92.0
offset_top = 113.0
offset_right = 329.0
offset_bottom = 152.0
text = "15m"
placeholder_text = "1h5m2s"
alignment = 1
select_all_on_focus = true

[node name="Label" type="Label" parent="SettingsUI/Inputs"]
layout_mode = 0
offset_left = 95.0
offset_top = 80.0
offset_right = 329.0
offset_bottom = 106.0
text = "Time:"
horizontal_alignment = 1

[node name="FeedbackLabel" type="Label" parent="SettingsUI/Inputs"]
layout_mode = 0
offset_left = 25.0
offset_top = 157.0
offset_right = 386.0
offset_bottom = 183.0
theme_override_colors/font_color = Color(0.839216, 0.478431, 0.478431, 1)
horizontal_alignment = 1

[node name="RunningUI" type="Node2D" parent="."]
visible = false

[node name="RemainingTimeLabel" type="Label" parent="RunningUI"]
offset_left = 79.0
offset_top = 79.0
offset_right = 340.0
offset_bottom = 140.0
text = "10:00:01"
label_settings = SubResource("LabelSettings_6wv0n")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="RunningUI"]
offset_left = 81.0
offset_top = 140.0
offset_right = 345.0
offset_bottom = 204.0
theme_override_constants/separation = 50
alignment = 1

[node name="CancelButton" type="Button" parent="RunningUI/ButtonsContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Cancel"

[node name="TimeoutUI" type="Node2D" parent="."]
visible = false
position = Vector2(0, 69)

[node name="Label" type="Label" parent="TimeoutUI"]
offset_left = 169.0
offset_top = 9.0
offset_right = 252.0
offset_bottom = 35.0
text = "Timed out!"

[node name="TimeoutOKButton" type="Button" parent="TimeoutUI"]
offset_left = 82.0
offset_top = 50.0
offset_right = 333.0
offset_bottom = 139.0
text = "OK"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TimeoutAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ctorr")
mix_target = 2
